themes/socialbase/components/03-molecules/form-elements/image-widget/image-widget.scss
@import 'settings';

.form-type-managed-file .image-widget {
  margin-bottom: 1rem;

  .preview img {
    width: 100%;
  }

  @include for-tablet-portrait-up {
    display: flex;

    .preview {
      flex: 0 0 auto;
    }

    .file--image {
      margin-bottom: 0.5rem;
    }

  }

  .image-widget-data {
    padding: 0.5rem 1rem;
    background-color: $gray-lightest;
  }
}

// close the gap between an image upload and the description text right below it.
.form-type-managed-file .image-widget + .help-block {
  margin-top: -0.875rem
}


// This is kind of a hack. The upload field op on the post needs to display inline, but the image should not. Since this library is only loaded when the preview is there, the following line overrides the style from form-post-create.
.form--post-create .field--name-field-post-image.container-post-image {

  @include for-tablet-portrait-up {
    flex-basis: 100%;
  }

}

.btn--post-remove-image {
  position: absolute;
  top: -1px;
  right: -1px;
  background: rgba(0,0,0,0.2);
  border: 0;
  padding: 0;
  transition: 0.3s background-color;

  &:hover {
    background: rgba(0,0,0,0.8);

    .btn-icon {
      transform: rotate(90deg);
    }
  }

  .btn-icon {
    fill: white;
    height: 32px;
    width: 32px;
    transition: 0.3s transform;
  }

}

